# minicc

./: CMakeLists.txt  README.md  ast.cpp  ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
test/: cond.mc  exp1.mc  exp10.mc  exp11.mc  exp2.mc  exp3.mc  exp4.mc  exp5.mc  exp6.mc  exp7.mc  exp8.mc  exp9.mc  print.mc
